--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,60 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
 }
 
-.conainer {
-    background-image: url(./nick-jio-57rD2oDZquc-unsplash.jpg);
-    display: flex;
 
+
+.container {
+    background-image: url(./nick-jio-57rD2oDZquc-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem;
+    height: 100vh;
+    text-align: center;
+    /* align-items: center; */
+}
+
+h3 {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.guest-score,
+.home-score {
+    margin-top: .5rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 2rem;
+}
+
+.score {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+/* .scoreboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+} */
+
+.btn {
+    background-color: #fff;
+    color: #000;
+    padding: .2rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    /* font-size: 1.2rem; */
+    font-weight: 600;
+    margin-top: .5rem;
 }
