--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     padding: 2rem;
     height: 100vh;
     text-align: center;
-    /* align-items: center; */
+    align-items: center;
 }
 
 h3 {
